# LLM14

./: .gitignore  README.md  pyproject.toml
M1/: main.py
docs/: info.txt  model_tags.txt
src/m1/: main.py
src/m1/doc/: task.md
src/m1_cloud/: main.py  run_api.py  run_c1.py  run_c2.py
src/m2/: m2.py  mod.py
src/utils/: logging_config.py
