[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LLM14"
version = "0.1.0"
description = "testing AI tools"
authors = [{name = "Julian", email = "jstar.4095@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.6",
    "openai>=2.15",
    "requests>=2.32",
]

[project.urls]
homepage = "https://github.com/jul-star/LLM14"
repository = "https://github.com/jul-star/LLM14.git"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[tool.pytest.ini_options]   # ← правильное имя секции
addopts = "-v --cov=your_package_name --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/tests/*",
]